# pcsc-proxy-android

./: .gitignore  AUTHORS  Android.mk  AndroidManifest.xml  COPYING  Makefile.am  Makefile.cvs  README  ant.properties  configure.ac
android/btclient/: .project  AndroidManifest.xml  ant.properties  project.properties
android/btclient/res/layout/: device_item.xml  devicepicker_dialog.xml  main.xml
android/btclient/res/xml/: preferences.xml
android/btclient/src/org/openintents/smartcard/: PCSCDaemon.aidl
android/btclient/src/se/m7n/android/pcsc/btclient/: PCSCAddressPreference.java  PCSCPreferenceActivity.java  PCSCProxyActivity.java  PCSCProxyService.java
jni/: Application.mk  config.h
m4/: Makefile.am  pcsc.m4
res/values/: strings.xml
res/xml/: preferences.xml
src/: Makefile.am
src/client/: Makefile.am  client.c  client.h  pcsctest.c
src/common/: Makefile.am  bluetooth.c  bluetooth.h  message.c  message.h  netopts.c  netopts.h  network.c  network.h  nullenc.c  openssl.c  tls.c  tls.h  tlsopts.c  tlsopts.h  unix.c  unix.h
src/java/org/openintents/smartcard/: PCSCDaemon.aidl
src/java/se/m7n/android/pcsc_proxy/: PCSCAddressPreference.java  PCSCPreferenceActivity.java  PCSCProxyActivity.java  PCSCProxyService.java
src/server/: Makefile.am  server.c
